# Crystfel_tools

./: .gitignore  crystfel_tools.py  pyproject.toml  readme.md
UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
crystfel_tools/: crystfel_tools.py
crystfel_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
crystfel_tools/handling/: data_conversion.py  fast_math.py  io_functions.py  pystream.py  scaling.py  stream_handler.py
example_scripts/: convert_to_mtz.py  get_statistics.py  make_list_manual.py  mille_refinement.py  run_bulk_indexing.py  run_partialator.py  run_screening.py  setup_experiment.py  summarize_screening_runs.py
handling/: data_conversion.py  fast_math.py  io_functions.py  scaling.py
handling.egg-info/: PKG-INFO  SOURCES.txt
tests/: calc_resolution.py  high_performance_stream_reader.py  io_functions.py  plot_ewaldsphere_for_spectra.py  prep_data_for_DL.py  scaling.py  sinfo_parser.py  test_binning_and_merging.py  test_convert_crystfel_to_mtz.py  test_crystal_scaling.py  test_data_loading.py  test_df_splitting.py  test_find_key_h5.py  test_mille.py  test_scaling.py  testing.py
