[project]
name = "crystfel_tools"
version = "0.0.0"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["crystfel_tools.py","handling"]  # package names should match these glob patterns (["*"] by default)
exclude = ["test_data","tests"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
